<resources>
    <string name="app_name">Farmacias de Turno</string>
    <string name="turnos">Turnos</string>
    <string name="informacion">Informacion</string>
    <string name="farmacias_de_turno">Farmacias de Turno</string>
    <string name="pigu">Pigué</string>
    <string name="hola">hola</string>
    <string name="nombre">Nombre</string>
    <string name="horario">Horario</string>
    <string name="direccion">Direccion</string>
    <string name="todo">TODO</string>
    <string name="name">Name</string>
    <string name="fecha">Fecha</string>
    <string name="buscar">Buscar</string>
    <string name="la_farmacia_de_tusno_es">La farmacia de tusno es:</string>
    <string name="textview">TextView</string>
    <string name="la_farmacia_de_turno_es">La farmacia de turno es:</string>
    <string name="autor">Autor</string>

</resources>
