<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/LY1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/LYH2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/farmacia" />

        <LinearLayout
            android:id="@+id/LYV3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tHorario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/horario"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tDireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/direccion"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>